--- a/readme
+++ b/readme
@@ -2,3 +2,7 @@ Lucrare de licenta "Dezvoltare module si teme pentru Redmine"
 
 Universitatea Politehnica Bucuresti
 Facultatea de Inginerie in Limbi Straine (FILS)
+
+Studenti:
+2014-15
+Lavinia Stoian
